2006-06-30  Brent Smith  <gnome@nextreality.net>

	* src/yelp-debug.c: (yelp_debug): Print DB_PROFILE message to the
	screen
	* src/yelp-xslt-pager.c: (xslt_pager_process), (xslt_yelp_cache):
	Add support for the yelp:cache extension element; speeds up docbook
	processing for large documents (like gnumeric manual)
	* stylesheets/db2html.xsl.in: Use the yelp:cache extension element in
	the db.number template (overrides the one from gnome-doc-utils)

2006-06-25  Brent Smith  <gnome@nextreality.net>

	* src/yelp-toc-pager.c: (create_toc_from_index): fix the biggest
	memory leak known to man; was using xmlFree() instead of xmlFreeDoc()

2006-06-22  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Fix 'unknown gecko' error output. (Synched from Epiphany).

2006-06-21  Shaun McCance  <shaunm@gnome.org>

	* src/GNOME_Yelp.server.in:
	- Nuking from CVS, since were on DBUS now

2006-06-17  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Use xmlNewTextChild so ampersands don't screw us up

2006-06-13  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-info-parser.c: 
	Don't crash on certian *Note types
	Fix other *Note types to actually pick correct section for url
	Fixes bug #344730
	
==================== 2.15.3 ====================

2006-06-11  Brent Smith  <gnome@nextreality.net>

	* NEWS:
	* configure.in:
	- Version 2.15.3

2006-06-11  Brent Smith  <gnome@nextreality.net>

	* po/POTFILES.in:
	* src/Makefile.am:
	Some band-aids to get distcheck to not fail.

2006-06-11  Brent Smith  <gnome@nextreality.net>

	* configure.in:
	* src/Yelper.cpp:
	* src/yelp-bookmarks.c:
	* src/yelp-db-pager.c: (db_pager_parse), (db_pager_params),
	(db_pager_cancel):
	* src/yelp-db-print-pager.c: (db_print_pager_parse),
	(db_print_pager_params), (db_print_pager_cancel):
	* src/yelp-debug.c: (yelp_debug):
	* src/yelp-debug.h:
	* src/yelp-html.cpp:
	* src/yelp-info-parser.c: (open_info_file), (process_indirect_map),
	(process_tag_table), (node2iter), (process_page),